fixed profile covering stuff

--- a/www/css/styles.less
+++ b/www/css/styles.less
@@ -376,9 +376,9 @@ input[type="submit"], button {
 }
 
 #right {
+    display: none;
 	position: fixed;
     top: 20px;
-    right: 41px;
     width: 160px;
 	.date {
 		font-size: 18px;
